[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "linode-cli"
authors = [
  { name="Linode", email="developers@linode.com" },
]
description = "CLI for the Linode API"
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
  "terminaltables",
  "requests",
  "PyYAML",
  "future",
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/linode/linode-cli"
"Bug Tracker" = "https://github.com/linode/linode-cli/issues"

[project.scripts]
linode-cli = "linodecli:main"

[project.optional-dependencies]
DEV = ["pylint", "pytest==7.2.1", "build"]

[tool.setuptools]
packages = ["linodecli", "linodecli.plugins", "linodecli.configuration"]
